src/test/ui/consts/miri_unleashed/mutable_const.stderr
warning: skipping const checks
  --> $DIR/mutable_const.rs:10:38
   |
LL | const MUTABLE_BEHIND_RAW: *mut i32 = &UnsafeCell::new(42) as *const _ as *mut _;
   |                                      ^^^^^^^^^^^^^^^^^^^^

error: any use of this value will cause an error
  --> $DIR/mutable_const.rs:16:9
   |
LL | / const MUTATING_BEHIND_RAW: () = {
LL | |     // Test that `MUTABLE_BEHIND_RAW` is actually immutable, by doing this at const time.
LL | |     unsafe {
LL | |         *MUTABLE_BEHIND_RAW = 99
   | |         ^^^^^^^^^^^^^^^^^^^^^^^^ tried to modify constant memory
LL | |     }
LL | | };
   | |__-
   |
note: lint level defined here
  --> $DIR/mutable_const.rs:5:9
   |
LL | #![deny(const_err)]
   |         ^^^^^^^^^

error: aborting due to previous error

